INCLUDES=-I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl

noinst_LIBRARIES=libcmdline.a

libcmdline_a_SOURCES=\
	cmdline_action.cc \
	cmdline_action.h \
	cmdline_changelog.cc \
	cmdline_changelog.h \
	cmdline_check_resolver.cc \
	cmdline_check_resolver.h \
	cmdline_clean.cc \
	cmdline_clean.h \
	cmdline_common.h \
	cmdline_do_action.cc \
	cmdline_do_action.h \
	cmdline_download.cc \
	cmdline_download.h \
	cmdline_dump_resolver.cc \
	cmdline_dump_resolver.h \
	cmdline_forget_new.cc \
	cmdline_forget_new.h \
	cmdline_moo.cc \
	cmdline_moo.h \
	cmdline_progress.cc \
	cmdline_progress.h \
	cmdline_prompt.cc \
	cmdline_prompt.h \
	cmdline_resolver.cc \
	cmdline_resolver.h \
	cmdline_search.cc \
	cmdline_search.h \
	cmdline_show.cc \
	cmdline_show.h \
	cmdline_show_broken.cc \
	cmdline_show_broken.h \
	cmdline_simulate.cc \
	cmdline_simulate.h \
	cmdline_spinner.cc \
	cmdline_spinner.h \
	cmdline_update.cc \
	cmdline_update.h \
	cmdline_upgrade.cc \
	cmdline_upgrade.h \
	cmdline_util.cc \
	cmdline_util.h
