INCLUDES=-I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl

noinst_LIBRARIES=libgtk.a

libgtk_a_SOURCES=\
	download.cc \
	download.h \
	gui.cc \
	gui.h \
	info.cc \
	info.h \
	packageinformation.cc \
	packageinformation.h \
	packagestab.cc \
	packagestab.h \
	packagesview.cc \
	packagesview.h \
	previewtab.cc \
	previewtab.h \
	progress.cc \
	progress.h \
	resolver.cc \
	resolver.h \
	tab.cc \
	tab.h
