INCLUDES=-I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl

noinst_LIBRARIES=libgtk.a

pkgdatadir=$(datadir)/$(PACKAGE)

pkgdata_DATA = aptitude.glade

libgtk_a_SOURCES=\
	changelog.cc \
	changelog.h \
	dashboardtab.cc \
	dashboardtab.h \
	dependency_chains_tab.cc \
	dependency_chains_tab.h \
	download.cc \
	download.h \
	dpkg_terminal.cc \
	dpkg_terminal.h \
	entityview.cc \
	entityview.h \
	errortab.cc \
	errortab.h \
	filesview.cc \
	filesview.h \
	gui.cc \
	gui.h \
	hyperlink.cc \
	hyperlink.h \
	info.cc \
	info.h \
	notify.cc \
	notify.h \
	packageinformation.cc \
	packageinformation.h \
	packagestab.cc \
	packagestab.h \
	pkgview.cc \
	pkgview.h \
	previewtab.cc \
	previewtab.h \
	progress.cc \
	progress.h \
	resolver.cc \
	resolver.h \
	tab.cc \
	tab.h \
	treeview_cell_tooltips.cc \
	treeview_cell_tooltips.h
